Fix align li en nav

--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -1,4 +1,6 @@
 :root {
+    --font-family: 'gotham','sans-serif';
+    
     --primary-white: #FBFBFB;
     --primary-green: #2C7733;
     --primary-yellow: #FF8523;
@@ -10,8 +12,6 @@
     --second-light-green: #99CB9D;
     --second-grey: #3b4a5a;
     --second-light-grey: #eef1ef;
-
-    --font-family: 'gotham','sans-serif';
 }
 
 html {
@@ -111,13 +111,15 @@ nav ul li {
     transition:all 0.25s;
     padding: 1em;
     padding-inline: initial;
+    margin-top: auto;
+    margin-bottom: auto;
 }
 
 .navbarDropOption ul {
     display: none;
     flex-direction: column;
     justify-content: space-between;
-    background-color: #025255;
+    background-color: var(--second-grey);
     margin-top: 1em;
     padding: 0%;
     position: absolute;
